# solVPN

./: .attestor.json  .gitignore  API_DOCUMENTATION.md  Anchor.toml  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MVP_COMPLETION_SUMMARY.md  PRODUCTION_IMPLEMENTATION.md  QUICKSTART-WIREGUARD.txt  QUICKSTART.txt  README.md  TESTING_GUIDE.md  attestor.json  docker-compose.yml  env.example  package-lock.json  package.json  start-all-services.ps1  start-attestor.sh  start-complete-system.ps1  start-node-operator.sh  test-services.sh
.github/workflows/: ci.yml
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: error.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: BandwidthMonitor.tsx  ConnectButton.tsx  ServerList.tsx  VPNMap.tsx  WalletConnect.tsx
apps/web/lib/: solana.ts
circuits/: README.md  bandwidth_sum.circom  build-proof.sh  input.json  proof.json  session.circom  verification_key.json  verify-proof.sh
programs/dvpn/: Anchor.toml  Cargo.toml
programs/dvpn/src/: lib.rs
scripts/: deploy.ps1  setup-devnet.ps1
sdk/: package.json  tsconfig.json
sdk/src/: index.ts
sdk/src/idl/: dvpn.json
services/attestor/: Dockerfile  package.json  tsconfig.json
services/attestor/db/: schema.sql
services/attestor/src/: attestor.ts  claim-rewards.ts  index.ts  init-state.ts  read-state.ts  record-usage.ts  register-node.ts  rotate-mint.ts  set-mint-authority.ts
services/node-operator/: Dockerfile  package.json
services/node-operator/scripts/: gen-wg-config.sh
(+7 files in other folders)
